icons are added to the inputs and buttons, the spacing between the inputs is created. Fixed a bug that did not allow draw the new value to  when an item was removed from the income or expense lists.

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,11 +10,7 @@ body{
  
  /*************************** Inputs ***************************/
  
- .incomes{
-    justify-content: space-between;
-    align-items: center;
-    display: flex;
- }
+ 
 
 
 
@@ -34,40 +30,39 @@ body{
 }
 
 
-.h2-title-percentage{
-    font-size:4vw;
+.h2-title-percentage{    
     font-weight: 300;
     text-align: center;
     font-family:'Poppins', sans-serif;
 }
 
 .h2-title-income{
-    font-size:4vw;
+    
     font-weight: 300;
     text-align: center;
     font-family:'Poppins', sans-serif;
 }
 
 .titleIncome{
-    font-size:2vw;
+   
     font-weight: 200;
     font-family:'Poppins', sans-serif;
 }
 
 .titleExpenses{
-    font-size:2vw;
+    
     font-weight: 200;
     font-family:'Poppins', sans-serif;
 }
 
 .total{
-    font-size:2vw;
+
     font-weight: 300;
     font-family:'Poppins', sans-serif;
 }
 
 .titleBalance{
-    font-size:2vw;
+    
     font-weight: 200;
     font-family:'Poppins', sans-serif;
 }
